# konoha

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: panic-report.md
src/: error.rs  fs.rs  main.rs
src/app/: context.rs  event.rs  helper.rs  mod.rs
src/app/ui/: mod.rs  prelude.rs
src/app/ui/menu/: authentication.rs  loading.rs  mod.rs
src/app/ui/popup/: confirmation.rs  message.rs  mod.rs
src/app/ui/widget/: button.rs  input.rs  mod.rs
src/client/: auth.rs  context.rs  event.rs  macros.rs  mod.rs
