[package]
name = "konoha"
version = "0.1.0"
description = "A user-friendly TUI client for Matrix."
authors = [ "L3af <L3afMeAlon3@gmail.com>" ]
repository = "https://github.com/L3afMe/konoha"
edition = "2018"

[dependencies]
clap = "2.33.3"
crossterm = "0.19.0"
dirs = "3.0.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde_json = "1.0.64"
url = "2.2.2"
tracing-subscriber = "0.2.18"
os_info = "3.0.6"
backtrace = "0.3.59"
urlencoding = "1.3.3"
chrono = "0.4.19"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "eece920"
features = [ "encryption" ]

[dependencies.serde]
version = "1.0.126"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11.3"
features = [ "json" ]

[dependencies.tokio]
version = "1.6.0"
default-features = false
features = [ "rt-multi-thread", "sync", "macros" ]

[dependencies.tui]
version = "0.15.0"
default-features = false
features = [ "crossterm" ]

